--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-# Compiled class file
-*.class
+# Build files
+out
+target/
+gen
 
-# Log file
-*.log
+# IntelliJ files
+.idea
+*.iml
 
-# BlueJ files
-*.ctxt
+# Eclipse files
+.settings
+.classpath
+.project
+.externalToolBuilders
+.metadata
+maven-eclipse.xml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# UltraEdit .bak files
+*.bak
+
+# Vim files
+*.swp
+
+# Mac files
+.DS_Store
+
+# Windows files
+Thumbs.db
 
 # Package Files #
-*.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/nbactions.xml
