--- a/com.zarroboogsfound.ws4pi/pom.xml
+++ b/com.zarroboogsfound.ws4pi/pom.xml
@@ -14,6 +14,12 @@
 	<properties>
 		<pi4j.version>1.4</pi4j.version>
 		<undertow.version>2.1.0.Final</undertow.version>
+		<ant-jsch.version>1.9.7</ant-jsch.version>
+		<jsch.version>0.1.53</jsch.version>
+		<ant-contrib.version>20020829</ant-contrib.version>
+		<java.version>11</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	
 	<!-- DEPENDENCIES -->
