--- a/com.zarroboogsfound.ws4pi/config/config-old.json
+++ b/com.zarroboogsfound.ws4pi/config/config-old.json
@@ -6,6 +6,86 @@
 	"guid": "1e7fdd42-38ed-467e-bab5-d7f4eb946ccb",
 	"devices": [
 		{
+			"type": "stepper",
+			"name": "Right Arm",
+			"id" : 0,
+			"pins": [
+				{
+					"name": "IN1",
+					"provision": "digital output low",
+					"address": 21
+				},
+				{
+					"name": "IN2",
+					"provision": "digital output low",
+					"address": 22
+				},
+				{
+					"name": "IN3",
+					"provision": "digital output low",
+					"address": 23
+				},
+				{
+					"name": "IN4",
+					"provision": "digital output low",
+					"address": 24
+				}
+			]
+		},
+		{
+			"type": "stepper",
+			"name": "Left Arm",
+			"id" : 1,
+			"pins": [
+				{
+					"name": "IN1",
+					"provision": "digital output low",
+					"address": 26
+				},
+				{
+					"name": "IN2",
+					"provision": "digital output low",
+					"address": 27
+				},
+				{
+					"name": "IN3",
+					"provision": "digital output low",
+					"address": 28
+				},
+				{
+					"name": "IN4",
+					"provision": "digital output low",
+					"address": 29
+				}
+			]
+		},
+
+		{
+			"type": "switch",
+			"name": "Right Arm Limit Switch",
+			"id": 0,
+			"pins": [
+				{
+					"name": "IN",
+					"provision": "digital input pullup",
+					"address" : 25
+				}
+			]
+		},
+		{
+			"type": "switch",
+			"name": "Left Arm Limit Switch",
+			"id": 1,
+			"pins": [
+				{
+					"name": "IN",
+					"provision": "digital input pullup",
+					"address" : 31
+				}
+			]
+		},
+		
+		{
 			"type": "motor_bridge",
 			"name": "Right Track Motor",
 			"id": 0,
@@ -91,7 +171,7 @@
 				{
 					"name": "OUT",
 					"provision": "digital output low",
-					"address": 21
+					"address": 14
 				}
 			]
 		},
@@ -253,7 +333,7 @@
 				"reversed": "true",
 				"startPos": 17,
 				"minPos": -75,
-				"maxPos": 80,
+				"maxPos": 70,
 				"maxTorque": 25,
 				"speed": 300
 			},
